NetBSD Problem Report #40065

From tron@zhadum.org.uk  Sat Nov 29 13:22:52 2008
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 4304063B11D
	for <gnats-bugs@gnats.NetBSD.org>; Sat, 29 Nov 2008 13:22:52 +0000 (UTC)
Message-Id: <200811291322.mATDMmrG004698@colwyn.zhadum.org.uk>
Date: Sat, 29 Nov 2008 13:22:48 GMT
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: ipmi(4) no longer recognized on a HP Proliant ML110 G4
X-Send-Pr-Version: 3.95

>Number:         40065
>Category:       kern
>Synopsis:       ipmi(4) no longer recognized on a HP Proliant ML110 G4
>Confidential:   no
>Severity:       serious
>Priority:       low
>Responsible:    tron
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sat Nov 29 13:25:00 +0000 2008
>Closed-Date:    Thu Dec 18 06:40:11 +0000 2008
>Last-Modified:  Thu Dec 18 06:40:11 +0000 2008
>Originator:     Matthias Scheler
>Release:        NetBSD 5.0_BETA 2008-11-28 sources
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:
System: NetBSD colwyn.zhadum.org.uk 5.0_BETA NetBSD 5.0_BETA (COLWYN.64) #0: Sat Nov 29 11:19:05 GMT 2008 tron@colwyn.zhadum.org.uk:/src/sys/compile/COLWYN.64 amd64
Architecture: x86_64
Machine: amd64
>Description:
After the latest changes to the ipmi(4) driver the IPMI hardware in my
HP Proliant ML110 G4 is no longer recognized. Previous versions of the
driver recognized it like this:

ipmi0 at mainbus0: version 2.0 interface KCS iobase 0xca2/2 spacing 1

"envstat" reported reasonable sensor readings provided by IPMI afterwards.

>How-To-Repeat:
Boot NetBSD 5.0_BETA on a HP Proliant ML110 G4 and check the kernel
messages with "dmesg | grep ipmi".

>Fix:
None provided.

>Release-Note:

>Audit-Trail:
From: Takahiro Kambe <taca@back-street.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/40065: ipmi(4) no longer recognized on a HP Proliant
 ML110 G4
Date: Sat, 29 Nov 2008 22:42:47 +0900 (JST)

 In message <20081129132500.3AE8163B8BD@narn.NetBSD.org>
 	on Sat, 29 Nov 2008 13:25:00 +0000 (UTC),
 	tron@zhadum.org.uk wrote:
 > System: NetBSD colwyn.zhadum.org.uk 5.0_BETA NetBSD 5.0_BETA (COLWYN.64) #0: Sat Nov 29 11:19:05 GMT 2008 tron@colwyn.zhadum.org.uk:/src/sys/compile/COLWYN.64 amd64
 > Architecture: x86_64
 > Machine: amd64
 > >Description:
 > After the latest changes to the ipmi(4) driver the IPMI hardware in my
 > HP Proliant ML110 G4 is no longer recognized. Previous versions of the
 > driver recognized it like this:
 We discussed this problem with ML115 G1 on netbsd-jp mailing list.

 bmc_io_wait_spin() in sys/arch/x86/x86/ipmi.c, count will be
 initialized 5000 when cold start.  It was decreased revision 1.20 and
 increased 1.25.  But still small for my ML115.  I don't now what is
 the proper value to recognize the device.  At least, changing from
 5000 to 500000 recognize ipmi again.

 Best regards.

 -- 
 Takahiro Kambe <taca@back-street.net>

Responsible-Changed-From-To: kern-bug-people->tron
Responsible-Changed-By: tron@NetBSD.org
Responsible-Changed-When: Mon, 15 Dec 2008 12:13:36 +0000
Responsible-Changed-Why:
I'll handle this PR.


From: Matthias Scheler <tron@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40065 CVS commit: src/sys/arch/x86/x86
Date: Mon, 15 Dec 2008 12:13:46 +0000 (UTC)

 Module Name:	src
 Committed By:	tron
 Date:		Mon Dec 15 12:13:46 UTC 2008

 Modified Files:
 	src/sys/arch/x86/x86: ipmi.c

 Log Message:
 Keep trying to attach ipmi(4) in the background for five seconds.
 NetBSD now detects the IPMI support in a HP Proliant ML110 G4 again.
 This fixes PR kern/40065 by myself.


 To generate a diff of this commit:
 cvs rdiff -r1.26 -r1.27 src/sys/arch/x86/x86/ipmi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: tron@NetBSD.org
State-Changed-When: Mon, 15 Dec 2008 12:17:31 +0000
State-Changed-Why:
I'll request a pullup for the "netbsd-5" branch at some point this week.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40065 CVS commit: [netbsd-5] src/sys/arch/x86/x86
Date: Thu, 18 Dec 2008 01:04:38 +0000 (UTC)

 Module Name:	src
 Committed By:	snj
 Date:		Thu Dec 18 01:04:38 UTC 2008

 Modified Files:
 	src/sys/arch/x86/x86 [netbsd-5]: ipmi.c

 Log Message:
 Pull up following revision(s) (requested by tron in ticket #191):
 	sys/arch/x86/x86/ipmi.c: revision 1.27
 Keep trying to attach ipmi(4) in the background for five seconds.
 NetBSD now detects the IPMI support in a HP Proliant ML110 G4 again.
 This fixes PR kern/40065 by myself.


 To generate a diff of this commit:
 cvs rdiff -r1.21.2.5 -r1.21.2.6 src/sys/arch/x86/x86/ipmi.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: tron@NetBSD.org
State-Changed-When: Thu, 18 Dec 2008 06:40:11 +0000
State-Changed-Why:
The fix has been pulled up into the "netbsd-5" branch.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.