Keep trying to attach ipmi(4) in the background for five seconds. NetBSD now detects the IPMI support in a HP Proliant ML110 G4 again. This fixes PR kern/40065 by myself.